add hero background, icons, transitions

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework #3</title>
+    <title>Homework #4</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
@@ -68,6 +68,11 @@
           <h2 class="advantages-title visually-hidden">Our Advantages</h2>
           <ul class="advantages-list">
             <li class="advantages-item">
+              <div class="advantages-item-icon">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-strategy"></use>
+                </svg>
+              </div>
               <h3 class="advanatges-item-title">Strategy</h3>
               <p class="advantages-item-text">
                 Our goal is to identify the business problem to walk away with
@@ -75,6 +80,11 @@
               </p>
             </li>
             <li class="advantages-item">
+              <div class="advantages-item-icon">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-punctuality"></use>
+                </svg>
+              </div>
               <h3 class="advanatges-item-title">Punctuality</h3>
               <p class="advantages-item-text">
                 Bring the key message to the brand's audience for the best price
@@ -82,6 +92,11 @@
               </p>
             </li>
             <li class="advantages-item">
+              <div class="advantages-item-icon">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-diligence"></use>
+                </svg>
+              </div>
               <h3 class="advanatges-item-title">Diligence</h3>
               <p class="advantages-item-text">
                 Research and confirm brands that present the strongest digital
@@ -89,6 +104,11 @@
               </p>
             </li>
             <li class="advantages-item">
+              <div class="advantages-item-icon">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-technologies"></use>
+                </svg>
+              </div>
               <h3 class="advanatges-item-title">Technologies</h3>
               <p class="advantages-item-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -114,6 +134,36 @@
               <div class="team-item-card">
                 <h3 class="team-item-title">Mark Guerrero</h3>
                 <p class="team-item-text">Product Designer</p>
+                <ul class="social-list">
+                  <li>
+                    <a class="social-list-link" href="">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-list-link" href="">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-list-link" href="">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-list-link" href="">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -126,6 +176,36 @@
               <div class="team-item-card">
                 <h3 class="team-item-title">Tom Ford</h3>
                 <p class="team-item-text">Frontend Developer</p>
+                <ul class="social-list">
+                  <li>
+                    <a class="social-list-link" href="">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-list-link" href="">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-list-link" href="">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-list-link" href="">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -138,6 +218,36 @@
               <div class="team-item-card">
                 <h3 class="team-item-title">Camila Garcia</h3>
                 <p class="team-item-text">Marketing</p>
+                <ul class="social-list">
+                  <li>
+                    <a class="social-list-link" href="">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-list-link" href="">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-list-link" href="">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-list-link" href="">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -150,6 +260,36 @@
               <div class="team-item-card">
                 <h3 class="team-item-title">Daniel Wilson</h3>
                 <p class="team-item-text">UI Designer</p>
+                <ul class="social-list">
+                  <li>
+                    <a class="social-list-link" href="">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-list-link" href="">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-list-link" href="">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-list-link" href="">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -162,75 +302,129 @@
           <h2 class="portfolio-title">Our portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
-              <img
-                src="./images/portfolio-1.jpg"
-                alt="Banking App Project"
-                width="360"
-                height="300"
-              />
-              <div class="portfolio-item-container">
-                <h3 class="portfolio-item-title">Banking App</h3>
-                <p class="portfolio-item-text">App</p>
+              <div class="portfolio-item-wrapper">
+                <div class="portfolio-item-img">
+                  <img
+                    src="./images/portfolio-1.jpg"
+                    alt="Banking App Project"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="portfolio-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </div>
+                </div>
+                <div class="portfolio-item-container">
+                  <h3 class="portfolio-item-title">Banking App</h3>
+                  <p class="portfolio-item-text">App</p>
+                </div>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/portfolio-2.jpg"
-                alt="Cashless Payment Project"
-                width="360"
-                height="300"
-              />
-              <div class="portfolio-item-container">
-                <h3 class="portfolio-item-title">Cashless Payment</h3>
-                <p class="portfolio-item-text">Marketing</p>
+              <div class="portfolio-item-wrapper">
+                <div class="portfolio-item-img">
+                  <img
+                    src="./images/portfolio-2.jpg"
+                    alt="Cashless Payment Project"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="portfolio-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </div>
+                </div>
+                <div class="portfolio-item-container">
+                  <h3 class="portfolio-item-title">Cashless Payment</h3>
+                  <p class="portfolio-item-text">Marketing</p>
+                </div>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/portfolio-3.jpg"
-                alt="Meditation App Project"
-                width="360"
-                height="300"
-              />
-              <div class="portfolio-item-container">
-                <h3 class="portfolio-item-title">Meditation App</h3>
-                <p class="portfolio-item-text">App</p>
+              <div class="portfolio-item-wrapper">
+                <div class="portfolio-item-img">
+                  <img
+                    src="./images/portfolio-3.jpg"
+                    alt="Meditation App Project"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="portfolio-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </div>
+                </div>
+                <div class="portfolio-item-container">
+                  <h3 class="portfolio-item-title">Meditation App</h3>
+                  <p class="portfolio-item-text">App</p>
+                </div>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/portfolio-4.jpg"
-                alt="Taxi Service Project"
-                width="360"
-                height="300"
-              />
-              <div class="portfolio-item-container">
-                <h3 class="portfolio-item-title">Taxi Service</h3>
-                <p class="portfolio-item-text">Marketing</p>
+              <div class="portfolio-item-wrapper">
+                <div class="portfolio-item-img">
+                  <img
+                    src="./images/portfolio-4.jpg"
+                    alt="Taxi Service Project"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="portfolio-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </div>
+                </div>
+                <div class="portfolio-item-container">
+                  <h3 class="portfolio-item-title">Taxi Service</h3>
+                  <p class="portfolio-item-text">Marketing</p>
+                </div>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/portfolio-5.jpg"
-                alt="Screen Illustrations Project"
-                width="360"
-                height="300"
-              />
-              <div class="portfolio-item-container">
-                <h3 class="portfolio-item-title">Screen Illustrations</h3>
-                <p class="portfolio-item-text">Design</p>
+              <div class="portfolio-item-wrapper">
+                <div class="portfolio-item-img">
+                  <img
+                    src="./images/portfolio-5.jpg"
+                    alt="Screen Illustrations Project"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="portfolio-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </div>
+                </div>
+                <div class="portfolio-item-container">
+                  <h3 class="portfolio-item-title">Screen Illustrations</h3>
+                  <p class="portfolio-item-text">Design</p>
+                </div>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/portfolio-6.jpg"
-                alt="Online Courses Project"
-                width="360"
-                height="300"
-              />
-              <div class="portfolio-item-container">
-                <h3 class="portfolio-item-title">Online Courses</h3>
-                <p class="portfolio-item-text">Marketing</p>
+              <div class="portfolio-item-wrapper">
+                <div class="portfolio-item-img">
+                  <img
+                    src="./images/portfolio-6.jpg"
+                    alt="Online Courses Project"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="portfolio-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </div>
+                </div>
+                <div class="portfolio-item-container">
+                  <h3 class="portfolio-item-title">Online Courses</h3>
+                  <p class="portfolio-item-text">Marketing</p>
+                </div>
               </div>
             </li>
           </ul>
@@ -240,14 +434,49 @@
 
     <!-- Footer -->
     <footer class="page-footer">
-      <div class="container">
-        <a class="logo footer-logo" href="./index.html"
-          >Web<span class="logo-studio">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing &#38; growth solutions.
-        </p>
+      <div class="container footer-container">
+        <div class="footer-wrapper-logo">
+          <a class="logo footer-logo" href="./index.html"
+            >Web<span class="logo-studio">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing &#38; growth solutions.
+          </p>
+        </div>
+        <div class="footer-wrapper-social">
+          <p class="footer-social-list">Social media</p>
+          <ul class="social-list">
+            <li>
+              <a class="social-list-link" href="">
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a class="social-list-link" href="">
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a class="social-list-link" href="">
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a class="social-list-link" href="">
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
