--- a/index.html
+++ b/index.html
@@ -135,30 +135,30 @@
                 <h3 class="team-item-title">Mark Guerrero</h3>
                 <p class="team-item-text">Product Designer</p>
                 <ul class="social-list">
-                  <li>
+                  <li class="social-list-item">
                     <a class="social-list-link" href="">
-                      <svg width="16" height="16">
+                      <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-list-item">
                     <a class="social-list-link" href="">
-                      <svg width="16" height="16">
+                      <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-list-item">
                     <a class="social-list-link" href="">
-                      <svg width="16" height="16">
+                      <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-list-item">
                     <a class="social-list-link" href="">
-                      <svg width="16" height="16">
+                      <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -177,30 +177,30 @@
                 <h3 class="team-item-title">Tom Ford</h3>
                 <p class="team-item-text">Frontend Developer</p>
                 <ul class="social-list">
-                  <li>
+                  <li class="social-list-item">
                     <a class="social-list-link" href="">
-                      <svg width="16" height="16">
+                      <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-list-item">
                     <a class="social-list-link" href="">
-                      <svg width="16" height="16">
+                      <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-list-item">
                     <a class="social-list-link" href="">
-                      <svg width="16" height="16">
+                      <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-list-item">
                     <a class="social-list-link" href="">
-                      <svg width="16" height="16">
+                      <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -219,30 +219,30 @@
                 <h3 class="team-item-title">Camila Garcia</h3>
                 <p class="team-item-text">Marketing</p>
                 <ul class="social-list">
-                  <li>
+                  <li class="social-list-item">
                     <a class="social-list-link" href="">
-                      <svg width="16" height="16">
+                      <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-list-item">
                     <a class="social-list-link" href="">
-                      <svg width="16" height="16">
+                      <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-list-item">
                     <a class="social-list-link" href="">
-                      <svg width="16" height="16">
+                      <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-list-item">
                     <a class="social-list-link" href="">
-                      <svg width="16" height="16">
+                      <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -261,30 +261,30 @@
                 <h3 class="team-item-title">Daniel Wilson</h3>
                 <p class="team-item-text">UI Designer</p>
                 <ul class="social-list">
-                  <li>
+                  <li class="social-list-item">
                     <a class="social-list-link" href="">
-                      <svg width="16" height="16">
+                      <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-list-item">
                     <a class="social-list-link" href="">
-                      <svg width="16" height="16">
+                      <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-list-item">
                     <a class="social-list-link" href="">
-                      <svg width="16" height="16">
+                      <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-list-item">
                     <a class="social-list-link" href="">
-                      <svg width="16" height="16">
+                      <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
