--- a/index.html
+++ b/index.html
@@ -447,30 +447,30 @@
         <div class="footer-wrapper-social">
           <p class="footer-social-list">Social media</p>
           <ul class="social-list">
-            <li>
+            <li class="social-list-item">
               <a class="social-list-link" href="">
-                <svg width="24" height="24">
+                <svg class="social-list-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="social-list-item">
               <a class="social-list-link" href="">
-                <svg width="24" height="24">
+                <svg class="social-list-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="social-list-item">
               <a class="social-list-link" href="">
-                <svg width="24" height="24">
+                <svg class="social-list-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="social-list-item">
               <a class="social-list-link" href="">
-                <svg width="24" height="24">
+                <svg class="social-list-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
