--- a/index.html
+++ b/index.html
@@ -302,129 +302,121 @@
           <h2 class="portfolio-title">Our portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
-              <div class="portfolio-item-wrapper">
-                <div class="portfolio-item-img">
-                  <img
-                    src="./images/portfolio-1.jpg"
-                    alt="Banking App Project"
-                    width="360"
-                    height="300"
-                  />
-                  <div class="portfolio-overlay">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </div>
-                </div>
-                <div class="portfolio-item-container">
-                  <h3 class="portfolio-item-title">Banking App</h3>
-                  <p class="portfolio-item-text">App</p>
-                </div>
+              <div class="thumb">
+                <img
+                  src="./images/portfolio-1.jpg"
+                  alt="Banking App Project"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+
+              <div class="portfolio-item-container">
+                <h3 class="portfolio-item-title">Banking App</h3>
+                <p class="portfolio-item-text">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <div class="portfolio-item-wrapper">
-                <div class="portfolio-item-img">
-                  <img
-                    src="./images/portfolio-2.jpg"
-                    alt="Cashless Payment Project"
-                    width="360"
-                    height="300"
-                  />
-                  <div class="portfolio-overlay">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </div>
-                </div>
-                <div class="portfolio-item-container">
-                  <h3 class="portfolio-item-title">Cashless Payment</h3>
-                  <p class="portfolio-item-text">Marketing</p>
-                </div>
+              <div class="thumb">
+                <img
+                  src="./images/portfolio-2.jpg"
+                  alt="Cashless Payment Project"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+
+              <div class="portfolio-item-container">
+                <h3 class="portfolio-item-title">Cashless Payment</h3>
+                <p class="portfolio-item-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <div class="portfolio-item-wrapper">
-                <div class="portfolio-item-img">
-                  <img
-                    src="./images/portfolio-3.jpg"
-                    alt="Meditation App Project"
-                    width="360"
-                    height="300"
-                  />
-                  <div class="portfolio-overlay">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </div>
-                </div>
-                <div class="portfolio-item-container">
-                  <h3 class="portfolio-item-title">Meditation App</h3>
-                  <p class="portfolio-item-text">App</p>
-                </div>
+              <div class="thumb">
+                <img
+                  src="./images/portfolio-3.jpg"
+                  alt="Meditation App Project"
+                  width="360"
+                  height="300"
+                />
+
+                <p class="portfolio-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+              <div class="portfolio-item-container">
+                <h3 class="portfolio-item-title">Meditation App</h3>
+                <p class="portfolio-item-text">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <div class="portfolio-item-wrapper">
-                <div class="portfolio-item-img">
-                  <img
-                    src="./images/portfolio-4.jpg"
-                    alt="Taxi Service Project"
-                    width="360"
-                    height="300"
-                  />
-                  <div class="portfolio-overlay">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </div>
-                </div>
-                <div class="portfolio-item-container">
-                  <h3 class="portfolio-item-title">Taxi Service</h3>
-                  <p class="portfolio-item-text">Marketing</p>
-                </div>
+              <div class="thumb">
+                <img
+                  src="./images/portfolio-4.jpg"
+                  alt="Taxi Service Project"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+              <div class="portfolio-item-container">
+                <h3 class="portfolio-item-title">Taxi Service</h3>
+                <p class="portfolio-item-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <div class="portfolio-item-wrapper">
-                <div class="portfolio-item-img">
-                  <img
-                    src="./images/portfolio-5.jpg"
-                    alt="Screen Illustrations Project"
-                    width="360"
-                    height="300"
-                  />
-                  <div class="portfolio-overlay">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </div>
-                </div>
-                <div class="portfolio-item-container">
-                  <h3 class="portfolio-item-title">Screen Illustrations</h3>
-                  <p class="portfolio-item-text">Design</p>
-                </div>
+              <div class="thumb">
+                <img
+                  src="./images/portfolio-5.jpg"
+                  alt="Screen Illustrations Project"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+              <div class="portfolio-item-container">
+                <h3 class="portfolio-item-title">Screen Illustrations</h3>
+                <p class="portfolio-item-text">Design</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <div class="portfolio-item-wrapper">
-                <div class="portfolio-item-img">
-                  <img
-                    src="./images/portfolio-6.jpg"
-                    alt="Online Courses Project"
-                    width="360"
-                    height="300"
-                  />
-                  <div class="portfolio-overlay">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </div>
-                </div>
-                <div class="portfolio-item-container">
-                  <h3 class="portfolio-item-title">Online Courses</h3>
-                  <p class="portfolio-item-text">Marketing</p>
-                </div>
+              <div class="thumb">
+                <img
+                  src="./images/portfolio-6.jpg"
+                  alt="Online Courses Project"
+                  width="360"
+                  height="300"
+                />
+
+                <p class="portfolio-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+              <div class="portfolio-item-container">
+                <h3 class="portfolio-item-title">Online Courses</h3>
+                <p class="portfolio-item-text">Marketing</p>
               </div>
             </li>
           </ul>
